--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "Jinja2 ~= 3.1",
     "loguru > 0.7",
     "markdown ~= 3.4",
+    "markdownify ~= 0.13",
+    "pathvalidate ~= 3.2",
     "pyyaml ~= 6.0",
     "sqlparse ~= 0.5.0",
 ]
