Resolve "evaluate math expressions"

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,14 @@
 ---
 repos:
   - repo: "https://github.com/pre-commit/pre-commit-hooks"
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
       - id: check-toml
       - id: check-yaml
+        exclude: examples\/numerical\_eval\.yaml
         args:
           - "--allow-multiple-documents"
       - id: debug-statements
@@ -32,9 +33,8 @@ repos:
             truthy: {allowed-values: ["true", "True", "false", "False"]},
             comments: {require-starting-space: false},
             }}
-
   - repo: "https://github.com/psf/black"
-    rev: 24.8.0
+    rev: 24.10.0
     hooks:
       - id: black
   - repo: "https://github.com/PyCQA/isort"
