--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
     "Operating System :: OS Independent,",
 ]
 dependencies = [
+    "asteval ~= 1.0",
     "duckdb == 0.10.3",
     "isda-streaming @ git+https://git.tu-berlin.de/dima/isda/isda-streaming",
     "Jinja2 ~= 3.1",
@@ -32,13 +33,13 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "mypy ~= 1.9",
-    "pdoc ~= 14.4",
-    "pre-commit ~= 3.3",
+    "pdoc ~= 15.0",
+    "pre-commit ~= 4.0",
     "pylint ~= 3.1",
     "types-markdown ~= 3.4",
     "types-pyyaml ~= 6.0",
     "pytest ~= 8.1",
-    "pytest-cov ~= 5.0",
+    "pytest-cov ~= 6.0",
 ]
 
 [project.scripts]
@@ -59,7 +60,7 @@ moodle_tools = ["py.typed","*/templates/*.j2"]
 
 [tool.black]
 include = '\.py$'
-target-version = ["py310", "py311", "py312"]
+target-version = ["py311", "py312"]
 preview = true
 line-length = 99
 
@@ -78,9 +79,8 @@ skip_gitignore = true
 strict = true
 
 [tool.pylint.main]
-# Minimum Python version to use for version dependent checks. Will default to the
-# version used to run pylint.
-py-version = "3.10"
+# Minimum Python version to use for version dependent checks.
+py-version = "3.11"
 
 [tool.pylint.basic]
 # Good variable names which should always be accepted, separated by a comma.
@@ -90,6 +90,7 @@ good-names = ["i", "j", "k", "x", "_"]
 min-public-methods = 1
 max-attributes = 10
 max-line-length = 99
+max-positional-arguments = 7
 
 [tool.pylint."messages control"]
 disable = [
