--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,24 +33,6 @@ repos:
             truthy: {allowed-values: ["true", "True", "false", "False"]},
             comments: {require-starting-space: false},
             }}
-  - repo: "https://github.com/psf/black"
-    rev: 24.10.0
-    hooks:
-      - id: black
-  - repo: "https://github.com/PyCQA/isort"
-    rev: 5.13.2
-    hooks:
-      - id: isort
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.1
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - "flake8-bugbear"
-          - "flake8-docstrings"
-          - "flake8-comprehensions"
-          - "flake8-implicit-str-concat"
-          - "Flake8-pyproject"
   - repo: "https://github.com/shellcheck-py/shellcheck-py"
     rev: v0.10.0.1
     hooks:
@@ -58,18 +40,19 @@ repos:
         name: shellcheck
         args:
           - "--severity=style"
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.7.4
+    hooks:
+      - id: ruff
+        args:
+          - "--fix"
+      - id: ruff-format
   - repo: local
     hooks:
       - id: mypy
         name: mypy
         entry: mypy
         require_serial: true
-        language: system
-        types:
-          - python
-      - id: pylint
-        name: pylint
-        entry: pylint
         language: system
         types:
           - python
