--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,49 @@
 [build-system]
-requires = ["setuptools >= 61"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "moodle_tools"
-dynamic = ["version", "readme"]
+dynamic = ["version"]
 description = "A collection of tools to simplify working with Moodle quizzes."
-requires-python = ">=3.11,<3.14"
+readme = "README.md"
+requires-python = ">=3.11"
 license = { file = "LICENSE" }
 authors = [
+    { name = "Lennart Behme", email = "lennart.behme@tu-berlin.de" },
+    { name = "Gereon Dusella", email = "gereon.dusella@tu-berlin.de" },
+    { name = "Ricardo Ernesto Martinez Ramirez", email = "r.martinez.ramirez@tu-berlin.de" },
     { name = "Viktor Rosenfeld", email = "viktor.rosenfeld@tu-berlin.de" },
 ]
-maintainers = [{ name = "ISDA Team", email = "isda@dima.tu-berlin.de" }]
-keywords = ["data streams", "query relaxation"]
+maintainers = [{ name = "The ISDA Team", email = "isda@dima.tu-berlin.de" }]
+keywords = ["moodle"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "Operating System :: OS Independent,",
+    "Operating System :: OS Independent",
 ]
 dependencies = [
-    "asteval ~= 1.0",
-    "duckdb==1.1.3",
+    "asteval~=1.0",
+    "duckdb==1.2.1",
     "isda-streaming @ git+https://git.tu-berlin.de/dima/isda/isda-streaming",
-    "Jinja2 ~= 3.1",
-    "loguru > 0.7",
-    "markdown ~= 3.4",
-    "pyyaml ~= 6.0",
-    "sqlparse ~= 0.5.0",
+    "Jinja2~=3.1",
+    "loguru~=0.7.0",
+    "markdown~=3.4",
+    "pyyaml~=6.0",
+    "sqlparse~=0.5.0",
 ]
 
 [project.optional-dependencies]
-docs = [
-    "pdoc ~= 15.0",
-]
-test = [
-    "pytest ~= 8.3",
-    "pytest-cov ~= 6.0",
-]
+docs = ["pdoc~=15.0"]
+test = ["pytest~=8.3", "pytest-cov~=6.0"]
 dev = [
     "moodle-tools[docs,test]",
-    "mypy ~= 1.13",
-    "pre-commit ~= 4.0",
-    "types-markdown ~= 3.4",
-    "types-pyyaml ~= 6.0",
+    "mypy~=1.13",
+    "pre-commit~=4.0",
+    "types-markdown~=3.4",
+    "types-pyyaml~=6.0",
 ]
 
 [project.scripts]
@@ -56,12 +55,11 @@ Homepage = "https://git.tu-berlin.de/dima/moodle-tools"
 Repository = "https://git.tu-berlin.de/dima/moodle-tools"
 "Bug Tracker" = "https://git.tu-berlin.de/dima/moodle-tools/-/issues"
 
-[tool.setuptools.dynamic]
-version = { attr = "moodle_tools.__version__" }
-readme = { file = ["README.md"], content-type = "text/markdown" }
+[tool.hatch.version]
+path = "src/moodle_tools/__init__.py"
 
-[tool.setuptools.package-data]
-moodle_tools = ["py.typed","*/templates/*.j2"]
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.ruff]
 line-length = 99
@@ -69,39 +67,51 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = [
-    "A",  # flake8-builtins
-    "B",  # flake8-bugbear
-    "C4",  # flake8-comprehensions
+    "A",    # flake8-builtins
+    "ANN",  # flake8-annotations
+    "B",    # flake8-bugbear
+    "COM",  # flake8-commas
+    "C4",   # flake8-comprehensions
     "C90",  # mccabe
-    "D",  # pydocstyle
-    "E",  # pycodestyle errors
-    "F",  # pyflakes
-    "I",  # isort
+    "D",    # pydocstyle
+    "E",    # pycodestyle errors
+    "F",    # pyflakes
+    "FURB", # refurb
+    "I",    # isort
+    "ICN",  # flake8-import-conventions
     "ISC",  # flake8-implicit-str-concat
-    "N",  # pep8-naming
-    "Q",  # flake8-quotes
-    "PL",  # pylint
-    "PT",  # flake8-pytest-style
+    "N",    # pep8-naming
+    "NPY",  # Numpy checks
+    "PERF", # perflint
+    "PIE",  # flake8-pie
+    "PL",   # pylint
+    "PT",   # flake8-pytest-style
+    "PTH",  # flake8-use-pathlib
+    "PYI",  # flake8-pyi
+    "Q",    # flake8-quotes
     "RET",  # flake8-return
     "RUF",  # ruff-specific rules
-    "S",  # flake8-bandit
+    "S",    # flake8-bandit
     "SIM",  # flake8-simplify
-    "UP",  # pyupgrade
-    "W",  # pycodestyle warnings
+    "TC",   # flake8-typing-checking
+    "UP",   # pyupgrade
+    "W",    # pycodestyle warnings
 ]
 ignore = [
-    "D1",  # doctring rules
-    "D415",  # ends-in-punctuation
+    "COM812",  # missing-trailing-comma
+    "D1",      # doctring rules
+    "D415",    # ends-in-punctuation
     "ISC001",  # single-line-implicit-string-concatenation
-    "PLR0913",  # too-many-arguments
-    "PLR2004",  # magic-value-comparison
-    "PT004",  # pytest-missing-fixture-name-underscore (deprecated)
-    "PT005",  # pytest-incorrect-fixture-name-underscore (deprecated)
-    "S101",  # assert
-    "UP015",  # redundant-open-modes
+    "PLR0913", # too-many-arguments
+    "PLR2004", # magic-value-comparison
+    "S101",    # assert
 ]
-pydocstyle.convention = "google"
-pylint.max-positional-args = 7
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.lint.pylint]
+max-positional-args = 7
 
 [tool.mypy]
 strict = true
