--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "moodle_tools"
+name = "moodle-tools"
 dynamic = ["version"]
 description = "A collection of tools to simplify working with Moodle quizzes."
 readme = "README.md"
 requires-python = ">=3.11"
-license = { file = "LICENSE" }
+license = "Apache-2.0"
 authors = [
     { name = "Lennart Behme", email = "lennart.behme@tu-berlin.de" },
     { name = "Gereon Dusella", email = "gereon.dusella@tu-berlin.de" },
@@ -16,7 +16,7 @@ authors = [
     { name = "Viktor Rosenfeld", email = "viktor.rosenfeld@tu-berlin.de" },
 ]
 maintainers = [{ name = "The ISDA Team", email = "isda@dima.tu-berlin.de" }]
-keywords = ["moodle"]
+keywords = ["moodle", "teaching"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.11",
@@ -26,20 +26,18 @@ classifiers = [
 ]
 dependencies = [
     "asteval~=1.0",
-    "duckdb==1.2.1",
-    "isda-streaming==1.2.0",
     "Jinja2~=3.1",
     "loguru~=0.7.0",
     "markdown~=3.4",
     "pyyaml~=6.0",
-    "sqlparse~=0.5.0",
 ]
 
 [project.optional-dependencies]
 docs = ["pdoc~=15.0"]
-test = ["pytest~=8.3", "pytest-cov~=6.0"]
+isda = ["duckdb==1.2.1", "isda-streaming==1.2.0", "sqlparse~=0.5.0"]
+test = ["moodle-tools[isda]", "pytest~=8.3", "pytest-cov~=6.0"]
 dev = [
-    "moodle-tools[docs,test]",
+    "moodle-tools[docs,isda,test]",
     "mypy~=1.13",
     "pre-commit~=4.0",
     "types-markdown~=3.4",
@@ -53,10 +51,14 @@ make-questions = "moodle_tools.make_questions:main"
 [project.urls]
 Homepage = "https://git.tu-berlin.de/dima/moodle-tools"
 Repository = "https://git.tu-berlin.de/dima/moodle-tools"
+Documentation = "https://dima.gitlab-pages.tu-berlin.de/moodle-tools"
 "Bug Tracker" = "https://git.tu-berlin.de/dima/moodle-tools/-/issues"
 
 [tool.hatch.version]
 path = "src/moodle_tools/__init__.py"
+
+[tool.hatch.build.targets.sdist]
+exclude = [".gitlab/**", ".gitlab-ci.yml", ".pre-commit-config.yaml"]
 
 [tool.ruff]
 line-length = 99
