--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,15 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+isda = ["duckdb~=1.2", "isda-streaming~=1.2", "sqlparse~=0.5.0"]
+
+[dependency-groups]
 docs = ["pdoc~=15.0"]
-isda = ["duckdb==1.2.1", "isda-streaming==1.2.0", "sqlparse~=0.5.0"]
 test = ["moodle-tools[isda]", "pytest~=8.3", "pytest-cov~=6.0"]
 dev = [
-    "moodle-tools[docs,isda,test]",
+    {include-group = "docs"},
+    {include-group = "test"},
+    "moodle-tools[isda]",
     "mypy~=1.13",
     "pre-commit~=4.0",
     "types-markdown~=3.4",
