Move to static version in pyproject.toml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,13 @@
 ---
-variables:
-  UV_CACHE_DIR: "$CI_PROJECT_DIR/.cache/uv"
+# variables:
+#   UV_CACHE_DIR: "$CI_PROJECT_DIR/.cache/uv"
 
 default:
   image: ghcr.io/astral-sh/uv:0.7-python3.12-alpine
-  cache:
-    paths:
-      - .cache/uv
+  # cache:
+  #   paths:
+  #     - .cache/uv
   before_script:
-    - apk add git
     - python --version; uv --version  # For debugging
 
 pytest:
@@ -25,10 +24,14 @@ pytest:
       junit: pytest.xml
   coverage: '/TOTAL.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
   rules:
-    # Run for all changes to a merge request's source branch
+    # Run only for merge request pipelines (not branch pipelines)
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    # Run for all changes to the default branch
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    # Run for direct commits to the default branch
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == 'push'
+      when: always
+    # Otherwise, do not run
+    - when: never
     # Only run if the source code or the CI configuration has changed
     - changes:
         - src/**/*
