--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "moodle-tools"
-dynamic = ["version"]
+version = "1.0.0"
 description = "A collection of tools to simplify working with Moodle quizzes."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -57,9 +57,6 @@ Homepage = "https://git.tu-berlin.de/dima/moodle-tools"
 Repository = "https://git.tu-berlin.de/dima/moodle-tools"
 Documentation = "https://dima.gitlab-pages.tu-berlin.de/moodle-tools"
 "Bug Tracker" = "https://git.tu-berlin.de/dima/moodle-tools/-/issues"
-
-[tool.hatch.version]
-path = "src/moodle_tools/__init__.py"
 
 [tool.hatch.build.targets.sdist]
 exclude = [".gitlab/**", ".gitlab-ci.yml", ".pre-commit-config.yaml"]
