--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,9 +41,9 @@ repos:
         args:
           - "--severity=style"
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.9
+    rev: v0.11.10
     hooks:
-      - id: ruff
+      - id: ruff-check
         args:
           - "--fix"
       - id: ruff-format
