--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 dependencies = [
     "asteval~=1.0",
+    "dacite>=1.9.2",
     "Jinja2~=3.1",
     "loguru~=0.7.0",
     "markdown~=3.4",
