renamed Differentiated Set Equivalence Questions

--- a/examples/diff_set_equality.yaml
+++ b/examples/diff_set_equality.yaml
@@ -1,5 +1,5 @@
 ---
-type: diff_set_equiv
+type: diff_set_equality
 title: Differential Set Equivalence Example
 question: |-
   Which sets exist in the set \\[\\{A, B, \\{C, D\\}\\}\\]?
