--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "dacite>=1.9.2",
     "Jinja2~=3.1",
     "loguru~=0.7.0",
+    "lxml>=6.0.0",
     "markdown~=3.4",
     "pyyaml~=6.0",
 ]
