made ddl questions more robust to case differences

--- a/examples/coderunner-ddl.yaml
+++ b/examples/coderunner-ddl.yaml
@@ -17,7 +17,7 @@ answer: |-
 testcases:
   - description: Test auf Laufzeitfehler
     code: |-
-      SELECT 1;
+      SELECT version() as version;
     grade: 0.001
     hiderestiffail: true
   - description: Korrektheit Tabelle thisisatest
@@ -54,7 +54,7 @@ extra:
 testcases:
   - description: Test auf Laufzeitfehler
     code: |-
-      SELECT 1;
+      SELECT version() as version;
     grade: 0.001
     hiderestiffail: true
   - description: Korrektheit Tabelle thisisatest
