--- a/examples/coderunner-ddl-intern.yaml
+++ b/examples/coderunner-ddl-intern.yaml
@@ -17,7 +17,7 @@ answer: |-
 testcases:
   - description: Test auf Laufzeitfehler
     code: |-
-      SELECT 1;
+      SELECT version() as version;
     grade: 0.001
     hiderestiffail: true
   - description: Korrektheit Tabelle thisisatest
