--- a/examples/coderunner-ddl.yaml
+++ b/examples/coderunner-ddl.yaml
@@ -20,7 +20,7 @@ testcases:
     grade: 0.5
   - description: Test auf Laufzeitfehler
     code: |-
-      SELECT version() as version;
+      SELECT version() as "version";
     grade: 0.001
     hiderestiffail: true
   - description: Korrektheit Tabelle thisisatest
@@ -57,7 +57,7 @@ extra:
 testcases:
   - description: Test auf Laufzeitfehler
     code: |-
-      SELECT version() as version;
+      SELECT version() as "version";
     grade: 0.001
     hiderestiffail: true
   - description: Korrektheit Tabelle thisisatest
