--- a/examples/coderunner-dql-wo_connection.yaml
+++ b/examples/coderunner-dql-wo_connection.yaml
@@ -1,9 +1,10 @@
 ---
 type: sql_dql
 category: sql-dql
-title: Sample SQL Coderunner Question
+title: Sample SQL Coderunner Question graded all-or-nothing, generated without a DB connection
 parser: sqlparse
 markdown: true
+all_or_nothing: true
 question: |-
   Formulieren Sie den SQL-Ausdruck, der äquivalent zu folgender Aussage ist:
 
